fixed name and email form z-index

--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -82,9 +82,6 @@ button{
   }
 }
 #name-and-email {
-  #form-container {
-    z-index: 3
-  }
   .video-container {
     display:block;
     width: 100%;
